--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -784,7 +784,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6441162962157196"
+       "0.6441747142552103"
       ]
      },
      "execution_count": 11,
@@ -809,7 +809,7 @@
      "data": {
       "text/plain": [
        "array([[   54,    33],\n",
-       "       [ 5691, 11427]], dtype=int64)"
+       "       [ 5689, 11429]], dtype=int64)"
       ]
      },
      "execution_count": 12,
@@ -1055,8 +1055,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[  52,   35],\n",
-       "       [9684, 7434]], dtype=int64)"
+       "array([[  51,   36],\n",
+       "       [9680, 7438]], dtype=int64)"
       ]
      },
      "execution_count": 22,
@@ -1082,10 +1082,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.60      0.43      0.01      0.51      0.26        87\n",
-      "   low_risk       1.00      0.43      0.60      0.60      0.51      0.26     17118\n",
+      "  high_risk       0.01      0.59      0.43      0.01      0.50      0.26        87\n",
+      "   low_risk       1.00      0.43      0.59      0.60      0.50      0.25     17118\n",
       "\n",
-      "avg / total       0.99      0.44      0.60      0.60      0.51      0.26     17205\n",
+      "avg / total       0.99      0.44      0.59      0.60      0.50      0.25     17205\n",
       "\n"
      ]
     }
@@ -1171,7 +1171,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5159904274991842"
+       "0.5103601371413837"
       ]
      },
      "execution_count": 26,
@@ -1244,9 +1244,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PythonData",
+   "display_name": "mlenv",
    "language": "python",
-   "name": "pythondata"
+   "name": "mlenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1258,7 +1258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
