readme and image updates

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -806,21 +806,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[   54,    33],\n",
-       "       [ 5689, 11429]], dtype=int64)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[   54    33]\n",
+      " [ 5689 11429]]\n"
+     ]
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "confusion_matrix(y_test, y_pred)"
+    "matrix = confusion_matrix(y_test, y_pred)\n",
+    "print(matrix)"
    ]
   },
   {
@@ -1053,22 +1051,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  51,   36],\n",
-       "       [9680, 7438]], dtype=int64)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  52   35]\n",
+      " [9683 7435]]\n"
+     ]
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
     "y_pred = model.predict(X_test)\n",
-    "confusion_matrix(y_test, y_pred)"
+    "matrix = confusion_matrix(y_test, y_pred)\n",
+    "print(matrix)"
    ]
   },
   {
@@ -1082,10 +1078,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.59      0.43      0.01      0.50      0.26        87\n",
-      "   low_risk       1.00      0.43      0.59      0.60      0.50      0.25     17118\n",
+      "  high_risk       0.01      0.60      0.43      0.01      0.51      0.26        87\n",
+      "   low_risk       1.00      0.43      0.60      0.60      0.51      0.26     17118\n",
       "\n",
-      "avg / total       0.99      0.44      0.59      0.60      0.50      0.25     17205\n",
+      "avg / total       0.99      0.44      0.60      0.60      0.51      0.26     17205\n",
       "\n"
      ]
     }
@@ -1171,7 +1167,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5103601371413837"
+       "0.5160196365189295"
       ]
      },
      "execution_count": 26,
@@ -1191,22 +1187,20 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  62,   25],\n",
-       "       [7751, 9367]], dtype=int64)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  62   25]\n",
+      " [7751 9367]]\n"
+     ]
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
     "from sklearn.metrics import confusion_matrix\n",
     "y_pred = model.predict(X_test)\n",
-    "confusion_matrix(y_test, y_pred)"
+    "matrix = confusion_matrix(y_test, y_pred)\n",
+    "print(matrix)"
    ]
   },
   {
