Readme update, ensemble resave

--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -824,8 +824,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['loan_amnt', 'int_rate', 'installment', 'annual_inc', 'dti',\n",
+       "       'delinq_2yrs', 'inq_last_6mths', 'open_acc', 'pub_rec', 'revol_bal',\n",
+       "       'total_acc', 'out_prncp', 'out_prncp_inv', 'total_pymnt',\n",
+       "       'total_pymnt_inv', 'total_rec_prncp', 'total_rec_int',\n",
+       "       'total_rec_late_fee', 'recoveries', 'collection_recovery_fee',\n",
+       "       'last_pymnt_amnt', 'collections_12_mths_ex_med', 'policy_code',\n",
+       "       'acc_now_delinq', 'tot_coll_amt', 'tot_cur_bal', 'open_acc_6m',\n",
+       "       'open_act_il', 'open_il_12m', 'open_il_24m', 'mths_since_rcnt_il',\n",
+       "       'total_bal_il', 'il_util', 'open_rv_12m', 'open_rv_24m', 'max_bal_bc',\n",
+       "       'all_util', 'total_rev_hi_lim', 'inq_fi', 'total_cu_tl', 'inq_last_12m',\n",
+       "       'acc_open_past_24mths', 'avg_cur_bal', 'bc_open_to_buy', 'bc_util',\n",
+       "       'chargeoff_within_12_mths', 'delinq_amnt', 'mo_sin_old_il_acct',\n",
+       "       'mo_sin_old_rev_tl_op', 'mo_sin_rcnt_rev_tl_op', 'mo_sin_rcnt_tl',\n",
+       "       'mort_acc', 'mths_since_recent_bc', 'mths_since_recent_inq',\n",
+       "       'num_accts_ever_120_pd', 'num_actv_bc_tl', 'num_actv_rev_tl',\n",
+       "       'num_bc_sats', 'num_bc_tl', 'num_il_tl', 'num_op_rev_tl',\n",
+       "       'num_rev_accts', 'num_rev_tl_bal_gt_0', 'num_sats', 'num_tl_120dpd_2m',\n",
+       "       'num_tl_30dpd', 'num_tl_90g_dpd_24m', 'num_tl_op_past_12m',\n",
+       "       'pct_tl_nvr_dlq', 'percent_bc_gt_75', 'pub_rec_bankruptcies',\n",
+       "       'tax_liens', 'tot_hi_cred_lim', 'total_bal_ex_mort', 'total_bc_limit',\n",
+       "       'total_il_high_credit_limit', 'home_ownership_ANY',\n",
+       "       'home_ownership_MORTGAGE', 'home_ownership_OWN', 'home_ownership_RENT',\n",
+       "       'verification_status_Not Verified',\n",
+       "       'verification_status_Source Verified', 'verification_status_Verified',\n",
+       "       'issue_d_Feb-2019', 'issue_d_Jan-2019', 'issue_d_Mar-2019',\n",
+       "       'pymnt_plan_n', 'initial_list_status_f', 'initial_list_status_w',\n",
+       "       'next_pymnt_d_Apr-2019', 'next_pymnt_d_May-2019',\n",
+       "       'application_type_Individual', 'application_type_Joint App',\n",
+       "       'hardship_flag_N', 'debt_settlement_flag_N'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
